Fixes so only 1 temporary canvas per real canvs AND temporary and real canvas are aligned perfectly.

--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@
 
 .imageTemp { 
 	position: absolute; 
-	top: 1px; 
-	left: 1px;
+	top: 0px; 
+	left: 15px;
 	z-index:20;
 }
 
